DevOps/B-DOP-500-TIR-5-1-bernstein-dorian.kamberi/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      restartPolicy: Always
      volumes:
        - name: postgredb  # volume that is mountable by containers
          persistentVolumeClaim:
            claimName: local-pv-claim  # name of persistent volume claim
      containers:
      - name: postgres
        image: postgres:12
        ports:
          - containerPort: 5432
        volumeMounts:  # list of mounted volumes
          - mountPath: "/var/lib/postgresql/data"
            name: postgredb
