DevOps/B-DOP-500-TIR-5-1-bernstein-dorian.kamberi/redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  # default is 1 replica (not replicated)
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      restartPolicy: Always
      containers:
      - name: redis
        image: redis:5.0
        ports:
          - containerPort: 6379
