DevOps/B-DOP-500-TIR-5-1-bernstein-dorian.kamberi/traefik.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik-ingress-controller
  namespace: kube-public
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      namespace: kube-public
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "name"
                    operator: In
                    values:
                      - traefik-ingress-lb
              topologyKey: "kubernetes.io/hostname"
      containers:
      - image: traefik:1.7
        name: traefik-ingress-lb
        ports:
        - name: web
          containerPort: 80
        - name: admin
          containerPort: 8080
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
        - --accesslog  # enable access log
        - --accesslog.filepath=/dev/stdout  # write logs into container STDOUT
        - --accesslog.format=json
