DevOps/B-DOP-500-TIR-5-1-bernstein-dorian.kamberi/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  type: ClusterIP
  selector:
    app: result
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
