DevOps/B-DOP-500-TIR-5-1-bernstein-dorian.kamberi/traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: kube-public
spec:
  type: NodePort # expose the service externally on each node's IP
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 30021
    - name: admin
      port: 8080
      targetPort: 8080
      nodePort: 30042
