DevOps/B-DOP-500-TIR-5-1-bernstein-dorian.kamberi/poll.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  # ingresses must be in the same namespace as the services?
  name: poll
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: poll.dop.io
    http:
      paths:
      - path: /
        backend:
          serviceName: poll
          servicePort: web
